<resources>
    <string name="app_name">MyFitnessApp</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_nutrition">Điểm danh</string>
    <string name="menu_excercise">Bài tập</string>
    <string name="menu_statistic">Chỉ số cơ thể</string>
    <string name="menu_steptrack">Theo dõi bước chân</string>
    <string name="menu_userexc">Bài tập của tôi</string>
    <string name="menu_nutri_ref">Tham chiếu dinh dưỡng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawe_navr">DraweNavrActivity</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawe_nav">DraweNavActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
</resources>