<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_excercise">

    <fragment
        android:id="@+id/nav_nutrition"
        android:name="com.khangle.myfitnessapp.ui.nutrition.NutritionFragment"
        android:label="@string/menu_nutrition"
        tools:layout="@layout/fragment_nutrition" />

    <fragment
        android:id="@+id/nav_excercise"
        android:name="com.khangle.myfitnessapp.ui.excercise.ExcerciseFragment"
        android:label="@string/menu_excercise"
        tools:layout="@layout/fragment_excercise" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.khangle.myfitnessapp.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />
</navigation>